--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,26 +1,189 @@
 /* Responsive */
 /* A partir de aquí es para dar estilo par diferentes tamaños de pantalla */
 
-/* Media query para dispositivos tablet (mayores a 480px y hasta 1023px) */
-@media (min-width: 481px) and (max-width: 1023px) {
+/* Media query para  tablet (mayores a 480px y hasta 1023px) */
+@media (min-width: 427px)  {
     :root {
-        --bg-color: lightcoral;
-        --container-width: 85%;
+        --container-width:85%;
+    }
+
+    .show-on-mobile {
+        display: none;
+    }
+
+    .hide-on-mobile {
+        display: inherit;
+    }
+
+    .logos {
+        margin-bottom: 150px;
+    }
+
+    .hero-container {
+        margin-top: -200px;
+    }
+
+    .stadistic-data {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .stadistics-btn-container{
+        
+    flex-direction: row;
+    }
+    .news-container {
+        grid-template-columns: repeat(2, 1fr)
+    }
+
+    .discover {
+        clip-path: ellipse(105% 100% at center top);
+    }
+
+    .footer-desktop {
+        display: none;
+    }
+
+}
+/* Media query para escritorio (mayores a 1024px y hasta 1439px) */
+@media (min-width: 1024px) {
+    :root {
+        --bg-color: beige;
+        --container-width: 80%;
+    }
+
+    .mobile-nav {
+        display: none;
+    }
+
+    .desktop-nav {
+        display: flex;
+        align-items: center;
+        padding: 12px 0px;
+        gap: 16px;
+        justify-content: space-between;
+        font-size: 12px;
+    }
+
+    .desktop-nav-left {
+        display: flex;
+        gap: 30px;
+        align-items: center;
+    }
+
+    .desktop-nav-logo-and-menu {
+        display: flex;
+    }
+
+    .desktop-nav ul {
+        display: flex;
+        gap: 16px;
+    }
+
+    .desktop-nav li {
+        display: flex;
+        align-items: center;
+        font-size: 10px;
+        gap: 8px;
+    }
+    
+    .desktop-nav-buttons {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+    }
+
+    .desktop-nav-buttons button {
+        text-transform: uppercase;
+        padding: 10px 12px;
+        border-radius: 4px;
+    }
+
+    .header .btn-first-steps {
+        width: auto;
+        }
+
+    
+    .feature {
+        flex-direction: row;
+    }
+
+    .feature-media {
+        flex: 1;
+    }
+
+    .features-description {
+	align-items:center ;
+	justify-content: center;
+    flex: 1;
+    }
+
+    .feauture-inverse-on-desktop {
+        flex-direction: row-reverse;
+    }
+
+    .stadistic-data {
+        flex-direction: row;
+    }
+    
+    .stadistics-video-container video {
+		width: 100%;
+		border-top-right-radius: 480px ;
+		border-bottom-right-radius: 480px ;
+	}
+
+    .stadistics-btn-container {
+		flex-direction: row;
+        width: 100%;
+	}
+
+    .news-container {
+        grid-template-columns: repeat(4, 1fr)
+    }
+
+    .footer-mobile {
+		display: none;
+	}
+
+    .footer-desktop {
+        display: flex;
+    }
+    
+    .list-container{
+        display: grid;
+        gap: 8px;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+
+    .footer-terms {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .footer-end-container {
+        align-items: center;
+    }
+    .footer-end-list {
+    justify-content: space-around;
+    flex: 1;
+    }
+
+    .copyright {
+        flex: 1;
     }
 }
 
-/* Media query para dispositivos de escritorio (mayores a 1024px y hasta 1439px) */
-@media (min-width: 1024px) and (max-width: 1439px) {
-    :root {
-        --bg-color: beige;
-        --container-width: 75%;
-    }
-}
 
 /* Media query para dispositivos de escritorio XXL (mayores a 1440px) */
 @media (min-width: 1440px) {
-	:root {
-        --bg-color: aquamarine;
-        --container-width: 75%;
+
+    .mobile-nav {
+        display: none;
     }
+
+    .show-on-desktop-xxl {
+        display: inherit;
+    }
+
 }
+
