--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -155,9 +155,11 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
 
+
     .footer-terms {
         flex-direction: row;
         align-items: center;
+        justify-content: space-around;
     }
 
     .footer-end-container {
@@ -167,6 +169,7 @@
     justify-content: space-around;
     flex: 1;
     }
+
 
     .copyright {
         flex: 1;
