--- a/styles/global.css
+++ b/styles/global.css
@@ -241,7 +241,7 @@ a {
 		justify-content: center;
 	}
 
-	.stadistics-data {
+	.stadistic-data {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
